# Custom-Shell

./: .gitignore  CMakeLists.txt  README.md
src/: gemini-cmd.cpp  main.cpp  shell.cpp
